--- a/APIRestPedidos/SistemaPedidos.DAL/SistemaPedidos.DAL.csproj
+++ b/APIRestPedidos/SistemaPedidos.DAL/SistemaPedidos.DAL.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SistemaPedidos.Model\SistemaPedidos.Model.csproj" />
+  </ItemGroup>
+
 </Project>
