--- a/APIRestPedidos/SistemaPedidos.API/appsettings.json
+++ b/APIRestPedidos/SistemaPedidos.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "cadenaSQl": "Server=DESKTOP-E3BQRL1;DataBase=DBSPane;Trusted_Connection=true;TrustServerCertificate=true;"
+  }
 }
